# hugh-fields

./: .travis.yml  CMakeLists.txt  README.rst
inc/hugh/: fields.hpp
inc/hugh/field/: adapters.hpp  base.hpp  connections.hpp  container.hpp  values.hpp
inc/hugh/field/adapter/: multi.hpp  multi.inl  single.hpp  single.inl
inc/hugh/field/connection/: manager.hpp  manager.inl  update.hpp  update.inl
inc/hugh/field/multi/: base.hpp  base.inl
inc/hugh/field/single/: base.hpp  base.inl
inc/hugh/field/value/: multi.hpp  multi.inl  single.hpp  single.inl
share/doc/: CMakeLists.txt
share/doc/hugh/: CMakeLists.txt
share/doc/hugh-fields/: CMakeLists.txt  Doxyfile.dev.in  Doxyfile.usr.in
share/doc/hugh/fields/: hugh_fields.dev.doxygen.cfg.in  hugh_fields.usr.doxygen.cfg.in
src/lib/: CMakeLists.txt
src/lib/field/: CMakeLists.txt  base.cpp  container.cpp  defaults.cpp  version.hpp.in
src/lib/field/adapter/: multi.cpp  single.cpp
src/lib/field/connection/: manager.cpp  update.cpp
src/lib/field/multi/: base.cpp
src/lib/field/single/: base.cpp
src/lib/field/test/: CMakeLists.txt  adapter_multi.cpp  adapter_single.cpp  connection_manager.cpp  connection_update.cpp  container.cpp  shared.hpp  value_multi.cpp  value_single.cpp
src/lib/field/value/: multi.cpp  single.cpp
